--- a/css/index.css
+++ b/css/index.css
@@ -66,9 +66,33 @@ p {
     line-height: 1.4;
 }
 
+header {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin: 30px 0px;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-around;
+    font-size: 14px;
+    font-weight: bold;
+    width: 80%;
+}
+
+header nav a {
+    color: black;
+    text-decoration: none;
+}
+
 .container {
     width: 800px;
     margin: 0 auto;
+}
+
+.top-content img {
+    margin-bottom: 20px;
 }
 
 .top-content {
